# serializer version: 1
# name: test_aircon_set_hvac_mode[cool-COOL]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'COOL',
      'AUTO',
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[dry-DRY]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'DRY',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[fan_only-FAN]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      None,
      None,
      'AIR_CONDITIONING',
      'ON',
      'FAN',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[heat-HEAT]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'HEAT',
      'AUTO',
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[off-OFF]
  _Call(
    tuple(
      3,
      'MANUAL',
      None,
      None,
      'AIR_CONDITIONING',
      'OFF',
    ),
    dict({
    }),
  )
# ---
# name: test_heater_set_temperature
  _Call(
    tuple(
      1,
      'NEXT_TIME_BLOCK',
      22.0,
      None,
      'HEATING',
      'ON',
      'HEAT',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
